--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "express": "^4.14.0",
     "mongojs": "^2.4.0",
     "redis": "^2.6.2",
-    "uuid": "^2.0.3"
+    "uuid": "^2.0.3",
+    "winston": "^2.2.0"
   }
 }
